realized header was missing - fixed it with z-index

--- a/src/app.scss
+++ b/src/app.scss
@@ -14,11 +14,11 @@
   }
 
   .show-image {
-    z-index: 0
+    z-index: -1
   }
 
   .hide-image {
-    z-index: -1
+    z-index: -2
   }
 
   #footer {
